apps/aws-lb-controller/manifests/MutatingWebhookConfiguration-aws-load-balancer-webhook.yml
---
# Source: aws-load-balancer-controller/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: aws-load-balancer-webhook
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: aws-load-balancer-controller
    app.kubernetes.io/instance: aws-lb-controller
webhooks:
  - clientConfig:
      caBundle: REPLACED
      service:
        name: aws-load-balancer-webhook-service
        namespace: aws-lb-controller
        path: /mutate-v1-pod
    failurePolicy: Ignore
    name: mpod.elbv2.k8s.aws
    admissionReviewVersions:
      - v1
    namespaceSelector:
      matchExpressions:
        - key: elbv2.k8s.aws/pod-readiness-gate-inject
          operator: In
          values:
            - enabled
    objectSelector:
      matchExpressions:
        - key: app.kubernetes.io/name
          operator: NotIn
          values:
            - aws-load-balancer-controller
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: None
  - clientConfig:
      caBundle: REPLACED
      service:
        name: aws-load-balancer-webhook-service
        namespace: aws-lb-controller
        path: /mutate-v1-pod-server-id
    failurePolicy: Fail
    name: quicid.elbv2.k8s.aws
    admissionReviewVersions:
      - v1
    namespaceSelector:
      matchExpressions:
        - key: elbv2.k8s.aws/quic-server-id-inject
          operator: In
          values:
            - enabled
    objectSelector:
      matchExpressions:
        - key: app.kubernetes.io/name
          operator: NotIn
          values:
            - aws-load-balancer-controller
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: None
  - clientConfig:
      caBundle: REPLACED
      service:
        name: aws-load-balancer-webhook-service
        namespace: aws-lb-controller
        path: /mutate-v1-service
    failurePolicy: Fail
    name: mservice.elbv2.k8s.aws
    admissionReviewVersions:
      - v1
    objectSelector:
      matchExpressions:
        - key: app.kubernetes.io/name
          operator: NotIn
          values:
            - aws-load-balancer-controller
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - services
    sideEffects: None
  - clientConfig:
      caBundle: REPLACED
      service:
        name: aws-load-balancer-webhook-service
        namespace: aws-lb-controller
        path: /mutate-alb-target-control-namespace-v1-pod
    failurePolicy: Fail
    name: alb-target-control.namespace.elbv2.k8s.aws
    admissionReviewVersions:
      - v1
    namespaceSelector:
      matchExpressions:
        - key: elbv2.k8s.aws/alb-target-control-agent-injection
          operator: In
          values:
            - enabled
    objectSelector:
      matchExpressions:
        - key: app.kubernetes.io/name
          operator: NotIn
          values:
            - aws-load-balancer-controller
        - key: elbv2.k8s.aws/alb-target-control-agent-inject
          operator: NotIn
          values:
            - "false"
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: None
  - clientConfig:
      caBundle: REPLACED
      service:
        name: aws-load-balancer-webhook-service
        namespace: aws-lb-controller
        path: /mutate-alb-target-control-object-v1-pod
    failurePolicy: Fail
    name: alb-target-control.object.elbv2.k8s.aws
    admissionReviewVersions:
      - v1
    namespaceSelector:
      matchExpressions:
        - key: elbv2.k8s.aws/alb-target-control-agent-injection
          operator: DoesNotExist
    objectSelector:
      matchExpressions:
        - key: app.kubernetes.io/name
          operator: NotIn
          values:
            - aws-load-balancer-controller
        - key: elbv2.k8s.aws/alb-target-control-agent-inject
          operator: In
          values:
            - "true"
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: None
  - clientConfig:
      caBundle: REPLACED
      service:
        name: aws-load-balancer-webhook-service
        namespace: aws-lb-controller
        path: /mutate-elbv2-k8s-aws-v1beta1-targetgroupbinding
    failurePolicy: Fail
    name: mtargetgroupbinding.elbv2.k8s.aws
    admissionReviewVersions:
      - v1
    rules:
      - apiGroups:
          - elbv2.k8s.aws
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - targetgroupbindings
    sideEffects: None
