apps/aws-lb-controller/manifests/ValidatingWebhookConfiguration-aws-load-balancer-webhook.yml
---
# Source: aws-load-balancer-controller/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: aws-load-balancer-webhook
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: aws-load-balancer-controller
    app.kubernetes.io/instance: aws-lb-controller
webhooks:
  - clientConfig:
      caBundle: REPLACED
      service:
        name: aws-load-balancer-webhook-service
        namespace: aws-lb-controller
        path: /validate-elbv2-k8s-aws-v1beta1-ingressclassparams
    failurePolicy: Fail
    name: vingressclassparams.elbv2.k8s.aws
    admissionReviewVersions:
      - v1
    objectSelector:
      matchExpressions:
        - key: app.kubernetes.io/name
          operator: NotIn
          values:
            - aws-load-balancer-controller
    rules:
      - apiGroups:
          - elbv2.k8s.aws
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - ingressclassparams
    sideEffects: None
  - clientConfig:
      caBundle: REPLACED
      service:
        name: aws-load-balancer-webhook-service
        namespace: aws-lb-controller
        path: /validate-elbv2-k8s-aws-v1beta1-targetgroupbinding
    failurePolicy: Fail
    name: vtargetgroupbinding.elbv2.k8s.aws
    admissionReviewVersions:
      - v1
    rules:
      - apiGroups:
          - elbv2.k8s.aws
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - targetgroupbindings
    sideEffects: None
  - clientConfig:
      caBundle: REPLACED
      service:
        name: aws-load-balancer-webhook-service
        namespace: aws-lb-controller
        path: /validate-networking-v1-ingress
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: vingress.elbv2.k8s.aws
    objectSelector:
    namespaceSelector:
    admissionReviewVersions:
      - v1
    rules:
      - apiGroups:
          - networking.k8s.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - ingresses
    sideEffects: None
